--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheets" href="%PUBLIC_URL%/test.css"/>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/icon.webp" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/body.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/navbar.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/grid.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/listing.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/carmart.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/footer.css" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.webp" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <meta name="author" content="Le Motor Enterprise" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="description" content="Discover the best in car rentals, sales, and trade-ins at our car company located at 1 Roxy Square, 50 East Coast Road, Singapore. We offer a wide range of vehicles to suit your needs and provide exceptional service to ensure your satisfaction. Visit us today for the best deals on car rentals, sales, and trade-ins in Singapore!">
+  <meta name="keywords" content="car rental, car sales, car trade-in, car company, car rental company, car sales company, car trade-in company, car rental Singapore, car sales Singapore, car trade-in Singapore, car company Singapore, Leasing, Roxy Square, Marine Parade, Siglap, Lease, best, cheap, car leasing">
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <meta property="og:title" content="Le Motor Enterprise" />
+  <meta property="og:description"
+    content="Le Motor Enterprise is your go to shop for buying selling leasing and  trading in cars in Singapore" />
+  <meta property="og:url" content="" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Le Motor Enterprise" />
+
+  <meta name="apple-mobile-web-app-title" content="Le Motor Enterprise" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;display=swap" rel="stylesheet" />
+  <link
+  href="https://fonts.googleapis.com/css?family=League+Spartan"
+  rel="stylesheet"
+/>
+  <link rel="canonical" href="https://lemotorenterprise.github.io/LeMotor/" />
+    <!-- Preconnect to Google Maps -->
+    <link rel="preconnect" href="https://www.google.com">
+  
+    <!-- DNS-prefetch for Google Maps -->
+    <link rel="dns-prefetch" href="https://www.google.com">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+  <title>Le Motor Enterprise</title>
+</head>
+
+<script>
+
+  function scrollFunction() {
+      window.location.href = "https://chatgpt.com/g/g-RitYiGDNl-le-motor-enterprise";
+  }
+</script>
+
+<body>
+  <button onclick="scrollFunction()" id="scrollTopButton" title="Go to top">Chat with our AI bot🤖</button>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
+<footer>
+  <main>
+    <div class="footerStyle">
+      <div class="footerWrapper">
+        <div class="footerContent">
+          <div>
+            <img class="footerImg" src="%PUBLIC_URL%/icon.webp" loading="lazy" alt="Logo">
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+    <div class="bottomSection">
+      <a href="https://webwizardsg.com/">
+        <div class="wwContainer">
+          <img class="wwLogo" src="%PUBLIC_URL%/transparent.webp" loading="lazy" alt="Logo">
+        </div>
+      </a>
+      <p class="footerContentPStyle">Powered using React.Js</p>
+      <p class="footerContentPStyle">
+        Developed by Chen Yanguang from Web Wizards
+      </p>
+    </div>
+    </div>
+  </main>
+</footer>
+
 </html>
