--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/icon.webp" />
+  <link rel="icon" href="%PUBLIC_URL%/icon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="%PUBLIC_URL%/body.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/navbar.css" />
@@ -13,20 +13,20 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/footer.css" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.webp" />
 
-  <meta name="author" content="Le Motor Enterprise" />
+  <meta name="author" content="Shebella Beauty" />
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
-  <meta name="description" content="Discover the best in car rentals, sales, and trade-ins at our car company located at 1 Roxy Square, 50 East Coast Road, Singapore. We offer a wide range of vehicles to suit your needs and provide exceptional service to ensure your satisfaction. Visit us today for the best deals on car rentals, sales, and trade-ins in Singapore!">
+  <meta name="description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best.">
   <meta name="keywords" content="car rental, car sales, car trade-in, car company, car rental company, car sales company, car trade-in company, car rental Singapore, car sales Singapore, car trade-in Singapore, car company Singapore, Leasing, Roxy Square, Marine Parade, Siglap, Lease, best, cheap, car leasing">
 
-  <meta property="og:title" content="Le Motor Enterprise" />
+  <meta property="og:title" content="Shebella Beauty" />
   <meta property="og:description"
-    content="Le Motor Enterprise is your go to shop for buying selling leasing and  trading in cars in Singapore" />
+    content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best." />
   <meta property="og:url" content="" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Le Motor Enterprise" />
+  <meta property="og:site_name" content="Shebella Beauty" />
 
-  <meta name="apple-mobile-web-app-title" content="Le Motor Enterprise" />
+  <meta name="apple-mobile-web-app-title" content="Shebella Beauty" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-touch-fullscreen" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -35,7 +35,7 @@
   href="https://fonts.googleapis.com/css?family=League+Spartan"
   rel="stylesheet"
 />
-  <link rel="canonical" href="https://lemotorenterprise.github.io/LeMotor/" />
+  <link rel="canonical" href="https://shebellabeauty.github.io/Shebella/" />
     <!-- Preconnect to Google Maps -->
     <link rel="preconnect" href="https://www.google.com">
   
