--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
   <meta name="description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best.">
-  <meta name="keywords" content="car rental, car sales, car trade-in, car company, car rental company, car sales company, car trade-in company, car rental Singapore, car sales Singapore, car trade-in Singapore, car company Singapore, Leasing, Roxy Square, Marine Parade, Siglap, Lease, best, cheap, car leasing">
+  <meta name="keywords" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best.">
 
   <meta property="og:title" content="Shebella Beauty" />
   <meta property="og:description"
@@ -43,7 +43,7 @@
     <link rel="dns-prefetch" href="https://www.google.com">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <title>Le Motor Enterprise</title>
+  <title>Shebella Beauty</title>
 </head>
 
 <script>
