--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,6 @@
     <div class="footerStyle">
       <div class="footerWrapper">
         <div class="footerContent">
-          <div>
-            <img class="footerImg" src="%PUBLIC_URL%/icon.webp" loading="lazy" alt="Logo">
-          </div>
         </div>
       </div>
     </div>
@@ -75,7 +72,7 @@
     <div class="bottomSection">
       <a href="https://webwizardsg.com/">
         <div class="wwContainer">
-          <img class="wwLogo" src="%PUBLIC_URL%/transparent.webp" loading="lazy" alt="Logo">
+          <img class="wwLogo" src="%PUBLIC_URL%/transparent.jpg" loading="lazy" alt="Logo">
         </div>
       </a>
       <p class="footerContentPStyle">Powered using React.Js</p>
