--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/listing.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/carmart.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/footer.css" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.webp" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.jpg" />
 
   <meta name="author" content="Shebella Beauty" />
   <meta name="robots" content="index, follow" />
