--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,11 @@
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
   <meta name="description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best.">
-  <meta name="keywords" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best.">
-
+  <meta name="keywords" content="fat loss, fat loss treatment, PDRN, belly fat, women, slimming singapore, slimming tea, slimming pills, slimming massage, face slimming, slimming treatment, Toa payoh, Jurong, near me, cheap, safe, collagen singapore, collagen treatment, collagen supplement">
   <meta property="og:title" content="Shebella Beauty" />
   <meta property="og:description"
     content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best." />
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="https://shebellabeauty.com" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Shebella Beauty" />
 
@@ -35,7 +34,7 @@
   href="https://fonts.googleapis.com/css?family=League+Spartan"
   rel="stylesheet"
 />
-  <link rel="canonical" href="https://shebellabeauty.github.io/Shebella/" />
+  <link rel="canonical" href="https://shebellabeauty.com" />
     <!-- Preconnect to Google Maps -->
     <link rel="preconnect" href="https://www.google.com">
   
