--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,59 @@
     <!-- DNS-prefetch for Google Maps -->
     <link rel="dns-prefetch" href="https://www.google.com">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BeautySalon",
+        "name": "Shebella Beauty",
+        "url": "https://shebellabeauty.com",
+        "logo": "https://shebellabeauty.com/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/vskinbeautyconsultancy",
+          "https://www.instagram.com/shebellabeauty"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+65-92248800",
+          "contactType": "Customer Service"
+        },
+        "address": [
+          {
+            "@type": "PostalAddress",
+            "streetAddress": "85A Lor 4 Toa Payoh, #01-304D",
+            "addressLocality": "Singapore",
+            "postalCode": "311085",
+            "addressCountry": "SG"
+          },
+          {
+            "@type": "PostalAddress",
+            "streetAddress": "Blk 350 Jurong East Ave 1 #01-1239 Level, #2",
+            "addressLocality": "Singapore",
+            "postalCode": "600350",
+            "addressCountry": "SG"
+          }
+        ],
+        "review": {
+          "@type": "Review",
+          "url": "https://www.google.com/localservices/prolist?g2lbs=AOHF13k-3quz4b9AF-DgH6fvWAigB8WvEUR9x_MiITQvn16vggqaogPag7pLP_2o9GFJQzPVp5h2fvdkdBn7cuHYykw7wFmnxpVUyKiY21VfU3kLi7TLHxU%3D&hl=en-SG&gl=sg&cs=1&ssta=1&q=shebella%20beauty&oq=shebella%20beauty&slp=MgBSAggCYAB6tgFDZzl6YUdWaVpXeHNZU0JpWldGMWRIbEk2cV9MeS1XQWdJQUlXaUVRQUJBQkdBQVlBU0lQYzJobFltVnNiR0VnWW1WaGRYUjVLZ1lJQWhBQUVBR1NBUXhpWldGMWRIbGZjMkZzYjI2cUFUZ1FBVElmRUFFaUc5ampzcWszZ2w3bExhcmRpNDh0UXZzakx1N2dlMkJLLVZhNDJUSVRFQUlpRDNOb1pXSmxiR3hoSUdKbFlYVjBlUZIBHAoLL2cvMXRkcjVwX2IKDS9nLzExc21yZGptM2Q%3D&src=2&spp=CgsvZy8xdGRyNXBfYjqYAVdpRVFBQkFCR0FBWUFTSVBjMmhsWW1Wc2JHRWdZbVZoZFhSNUtnWUlBaEFBRUFHU0FReGlaV0YxZEhsZmMyRnNiMjZhQVFDcUFUZ1FBVElmRUFFaUc5ampzcWszZ2w3bExhcmRpNDh0UXZzakx1N2dlMkJLLVZhNDJUSVRFQUlpRDNOb1pXSmxiR3hoSUdKbFlYVjBlUT09&serdesk=1&lrlstt=1720683429922&ved=2ahUKEwjyotWBvZ6HAxXBVmwGHREQDJgQvS56BAgaEAE&scp=ChFnY2lkOmJlYXV0eV9zYWxvbhIzEhIJpVt39rMi2jERD2-YBlmmdLUiBUJlZG9rKhQNoaXGABVyTO09HTKyzQAlOb33PTABGg9zaGViZWxsYSBiZWF1dHkiD3NoZWJlbGxhIGJlYXV0eSoMQmVhdXR5IFNhbG9u"
+        },
+        "service": [
+          {
+            "@type": "Service",
+            "name": "Beauty Treatments"
+          },
+          {
+            "@type": "Service",
+            "name": "Cosmetics"
+          },
+          {
+            "@type": "Service",
+            "name": "Slimming Treatments"
+          }
+        ]
+      }
+      </script>
+      
 
   <title>Shebella Beauty</title>
 </head>
