--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/footer.css" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.jpg" />
 
-  <meta name="author" content="Shebella Beauty" />
+  <meta name="author" content="Web Wizards" />
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow" />
   <meta name="description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best.">
@@ -34,6 +34,7 @@
   href="https://fonts.googleapis.com/css?family=League+Spartan"
   rel="stylesheet"
 />
+  <!--CANNONICAL LINKS-->
   <link rel="canonical" href="https://shebellabeauty.com" />
     <!-- Preconnect to Google Maps -->
     <link rel="preconnect" href="https://www.google.com">
@@ -85,7 +86,130 @@
           {
             "@type": "Service",
             "name": "Slimming Treatments"
-          }
+          },
+          {
+            "@type": "Service",
+            "name": "Skin Rejuvenation"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Trimming"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Threading"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Embroidery"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension"
+          },
+          {
+            "@type": "Service",
+            "name": "Facial"
+          },
+          {
+            "@type": "Service",
+            "name": "Hair Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Hair Treatment"
+          },
+          {
+            "@type": "Service",
+            "name": "Manicure"
+          },
+          {
+            "@type": "Service",
+            "name": "Pedicure"
+          },
+          {
+            "@type": "Service",
+            "name": "Makeup"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Microblading"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Shaping"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Tinting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Tinting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Lifting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Perm"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Refill"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Fixing"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Repair"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Refill"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Fixing"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Repair"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Shaping"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Tinting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Lifting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Perm"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Ref
         ]
       }
       </script>
