--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/icon.jpg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="stylesheet" href="/body.css"/><link rel="stylesheet" href="/navbar.css"/><link rel="stylesheet" href="/grid.css"/><link rel="stylesheet" href="/listing.css"/><link rel="stylesheet" href="/carmart.css"/><link rel="stylesheet" href="/footer.css"/><link rel="apple-touch-icon" href="/icon.jpg"/><meta name="author" content="Shebella Beauty"/><meta name="robots" content="index, follow"/><meta name="googlebot" content="index, follow"/><meta name="description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best."><meta name="keywords" content="slimming singapore,  slim couture review, Informational 100%, slimming body care, Informational 50%, Commercial 50%, do slimming treatments work, slimming spa treatments near mefat loss, fat loss treatment, PDRN, belly fat, women, slimming singapore, slimming tea, slimming pills, slimming massage, face slimming, slimming treatment, Toa payoh, Jurong, near me, cheap, safe, collagen singapore, collagen treatment, collagen supplement"><meta property="og:title" content="Shebella Beauty"/><meta property="og:description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best."/><meta property="og:url" content="https://shebellabeauty.com"/><meta property="og:type" content="website"/><meta property="og:site_name" content="Shebella Beauty"/><meta name="apple-mobile-web-app-title" content="Shebella Beauty"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-touch-fullscreen" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css?family=League+Spartan" rel="stylesheet"/><link rel="canonical" href="https://shebellabeauty.com"/><link rel="preconnect" href="https://www.google.com"><link rel="dns-prefetch" href="https://www.google.com"><script src="https://accounts.google.com/gsi/client" async defer="defer"></script><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/icon.jpg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="stylesheet" href="/body.css"/><link rel="stylesheet" href="/navbar.css"/><link rel="stylesheet" href="/grid.css"/><link rel="stylesheet" href="/listing.css"/><link rel="stylesheet" href="/carmart.css"/><link rel="stylesheet" href="/footer.css"/><link rel="apple-touch-icon" href="/icon.jpg"/><meta name="author" content="Web Wizards"/><meta name="robots" content="index, follow"/><meta name="googlebot" content="index, follow"/><meta name="description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best."><meta name="keywords" content="slimming singapore,  slim couture review, Informational 100%, slimming body care, Informational 50%, Commercial 50%, do slimming treatments work, slimming spa treatments near mefat loss, fat loss treatment, PDRN, belly fat, women, slimming singapore, slimming tea, slimming pills, slimming massage, face slimming, slimming treatment, Toa payoh, Jurong, near me, cheap, safe, collagen singapore, collagen treatment, collagen supplement"><meta property="og:title" content="Shebella Beauty"/><meta property="og:description" content="Shebella Beauty, your ultimate destination for all things beauty, is conveniently located at two vibrant locations in Singapore. Visit us at Blk 350 Jurong East Ave 1 #01-1239 (Level 2, 600350) or at 85A Lor 4 Toa Payoh, #01-304D, Singapore 311085. We specialize in a wide range of services including slimming treatments, skin rejuvenation, and eyebrow trimming and threading. At Shebella Beauty, we are dedicated to providing you with a luxurious and personalized beauty experience, making it a true beautician's paradise. Step into our stores and let our expert team help you look and feel your best."/><meta property="og:url" content="https://shebellabeauty.com"/><meta property="og:type" content="website"/><meta property="og:site_name" content="Shebella Beauty"/><meta name="apple-mobile-web-app-title" content="Shebella Beauty"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-touch-fullscreen" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;display=swap" rel="stylesheet"/><link href="https://fonts.googleapis.com/css?family=League+Spartan" rel="stylesheet"/><link rel="canonical" href="https://shebellabeauty.com"/><link rel="preconnect" href="https://www.google.com"><link rel="dns-prefetch" href="https://www.google.com"><script src="https://accounts.google.com/gsi/client" async defer="defer"></script><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "BeautySalon",
         "name": "Shebella Beauty",
@@ -41,6 +41,129 @@
           {
             "@type": "Service",
             "name": "Slimming Treatments"
-          }
+          },
+          {
+            "@type": "Service",
+            "name": "Skin Rejuvenation"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Trimming"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Threading"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Embroidery"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension"
+          },
+          {
+            "@type": "Service",
+            "name": "Facial"
+          },
+          {
+            "@type": "Service",
+            "name": "Hair Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Hair Treatment"
+          },
+          {
+            "@type": "Service",
+            "name": "Manicure"
+          },
+          {
+            "@type": "Service",
+            "name": "Pedicure"
+          },
+          {
+            "@type": "Service",
+            "name": "Makeup"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Microblading"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Shaping"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyebrow Tinting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Tinting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Lifting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Perm"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Refill"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Fixing"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Repair"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Refill"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Fixing"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Repair"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Shaping"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Tinting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Lifting"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Perm"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Removal"
+          },
+          {
+            "@type": "Service",
+            "name": "Eyelash Extension Ref
         ]
       }</script><title>Shebella Beauty</title><script defer="defer" src="/static/js/main.f0864f3c.js"></script></head><script>function scrollFunction(){window.location.href="https://chatgpt.com/g/g-JuFBmJhoZ-shebella-beauty-bot"}</script><body><button onclick="scrollFunction()" id="scrollTopButton" title="Go to top">Chat with our AI bot🤖</button><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body><footer><main><div class="footerStyle"><div class="footerWrapper"><div class="footerContent"></div></div></div><div class="bottomSection"><a href="https://webwizardsg.com/"><div class="wwContainer"><img class="wwLogo" src="/transparent.jpg" loading="lazy" alt="Logo"></div></a><p class="footerContentPStyle">Powered using React.Js</p><p class="footerContentPStyle">Developed by Chen Yanguang from Web Wizards</p></div></main></footer></html>
