--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,15 @@
     <!-- DNS-prefetch for Google Maps -->
     <link rel="dns-prefetch" href="https://www.google.com">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BHYK0R2P5P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BHYK0R2P5P');
+    </script>
       
     <script type="application/ld+json">
       {
