--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
 <body>
   <button onclick="scrollFunction()" id="scrollTopButton" title="Go to top">Chat with our AI bot🤖</button>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <script id="setmore_script" type="text/javascript" src="https://storage.googleapis.com/fullintegration-live/webComponentAppListing/Container/setmoreIframeLive.js"></script><a style="float:none; position: fixed; right: -2px; top: 25%; display: block; z-index: 20000" id="Setmore_button_iframe"  href="https://booking.setmore.com/scheduleappointment/5a7b55c3-4b0c-4f26-ace7-dd17b3b54b9c"><img border="none" src="https://storage.googleapis.com/full-assets/setmore/images/1.0/Calendar/Setmore-Book-Now.png" alt="Book an appointment with ShebellaBeauty using Setmore"/></a>  <div id="root"></div>
 </body>
 
 <footer>
